fix: exclude some files from sonar code analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,5 @@ jobs:
           -Dsonar.organization=kevin-default
           -Dsonar.projectKey=kevin-default_go-simple-auth
           -Dsonar.go.coverage.reportPaths=coverage.out
+          -Dsonar.coverage.exclusions=**/*_test.go,**/*_mock.go
+          -Dsonar.sources=./internal
