--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,11 @@ jobs:
     - name: Run tests
       run: make test
 
-    - name: Generate coverage report
-      run: make coverage
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage.out
 
   sonarcloud:
     needs: test
@@ -32,7 +35,11 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0  
-      - name: SonarQubeScan
+      - name: Download coverage report
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+      - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v7
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
